@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="ch.amana.android.cputuner" android:versionName="@string/version"
-	android:installLocation="internalOnly" android:versionCode="201106150">
+	android:installLocation="internalOnly" android:versionCode="201106230">
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
