@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="version">2.3.1</string> 
+    <string name="version">2.3.3-rc1</string> 
 </resources>
