@@ -21,6 +21,7 @@ import android.widget.EditText;
 import android.widget.SeekBar;
 import android.widget.SeekBar.OnSeekBarChangeListener;
 import android.widget.Spinner;
+import android.widget.SpinnerAdapter;
 import android.widget.TableLayout;
 import android.widget.TableRow;
 import android.widget.TextView;
@@ -34,7 +35,6 @@ import ch.amana.android.cputuner.helper.GuiUtils;
 import ch.amana.android.cputuner.helper.Logger;
 import ch.amana.android.cputuner.helper.SettingsStorage;
 import ch.amana.android.cputuner.hw.CpuHandler;
-import ch.amana.android.cputuner.hw.HardwareHandler;
 import ch.amana.android.cputuner.model.ProfileModel;
 import ch.amana.android.cputuner.provider.db.DB;
 import ch.amana.android.cputuner.view.fragments.GovernorBaseFragment;
@@ -47,9 +47,9 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 	private ProfileModel profile;
 	private CpuHandler cpuHandler;
 	private SeekBar sbCpuFreqMax;
-	private TextView tvCpuFreqMax;
+	private Spinner spCpuFreqMax;
 	private SeekBar sbCpuFreqMin;
-	private TextView tvCpuFreqMin;
+	private Spinner spCpuFreqMin;
 	private int[] availCpuFreqsMax;
 	private int[] availCpuFreqsMin;
 	private ProfileModel origProfile;
@@ -134,8 +134,8 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 
 		// llTop = (LinearLayout) findViewById(R.id.llTop);
 		etName = (EditText) findViewById(R.id.etName);
-		tvCpuFreqMax = (TextView) findViewById(R.id.tvCpuFreqMax);
-		tvCpuFreqMin = (TextView) findViewById(R.id.tvCpuFreqMin);
+		spCpuFreqMax = (Spinner) findViewById(R.id.spCpuFreqMax);
+		spCpuFreqMin = (Spinner) findViewById(R.id.spCpuFreqMin);
 		labelCpuFreqMin = (TextView) findViewById(R.id.labelCpuFreqMin);
 		labelCpuFreqMax = (TextView) findViewById(R.id.labelCpuFreqMax);
 		sbCpuFreqMax = (SeekBar) findViewById(R.id.SeekBarCpuFreqMax);
@@ -160,22 +160,9 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 
 			@Override
 			public void onStopTrackingTouch(SeekBar seekBar) {
-				try {
-					int max = availCpuFreqsMax[sbCpuFreqMax.getProgress()];
-					int min = availCpuFreqsMin[sbCpuFreqMin.getProgress()];
-					if (max >= min) {
-						updateModel();
-						profile.setMaxFreq(max);
-						updateView();
-					} else {
-						Toast.makeText(ProfileEditor.this, R.string.msg_minimal_frequency_bigger_than_the_maximal, Toast.LENGTH_LONG).show();
-						updateView();
-					}
-
-				} catch (ArrayIndexOutOfBoundsException e) {
-					Logger.e("Cannot set max freq in gui", e);
-				}
+				setFrequency();
 			}
+
 
 			@Override
 			public void onStartTrackingTouch(SeekBar seekBar) {
@@ -191,20 +178,7 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 
 			@Override
 			public void onStopTrackingTouch(SeekBar seekBar) {
-				try {
-					int max = availCpuFreqsMax[sbCpuFreqMax.getProgress()];
-					int min = availCpuFreqsMin[sbCpuFreqMin.getProgress()];
-					if (max >= min) {
-						updateModel();
-						profile.setMinFreq(min);
-						updateView();
-					} else {
-						Toast.makeText(ProfileEditor.this, R.string.msg_minimal_frequency_bigger_than_the_maximal, Toast.LENGTH_LONG).show();
-						updateView();
-					}
-				} catch (ArrayIndexOutOfBoundsException e) {
-					Logger.e("Cannot set max freq in gui", e);
-				}
+				setFrequency();
 			}
 
 			@Override
@@ -216,6 +190,33 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 			}
 		});
 
+		spCpuFreqMax.setAdapter(getCpufreqSpinnerAdapter(availCpuFreqsMax));
+		spCpuFreqMax.setOnItemSelectedListener(new OnItemSelectedListener() {
+			@Override
+			public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
+				sbCpuFreqMax.setProgress(position);
+				setFrequency();
+			}
+
+			@Override
+			public void onNothingSelected(AdapterView<?> parent) {
+
+			}
+		});
+
+		spCpuFreqMin.setAdapter(getCpufreqSpinnerAdapter(availCpuFreqsMin));
+		spCpuFreqMin.setOnItemSelectedListener(new OnItemSelectedListener() {
+			@Override
+			public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
+				sbCpuFreqMin.setProgress(position);
+				setFrequency();
+			}
+
+			@Override
+			public void onNothingSelected(AdapterView<?> parent) {
+
+			}
+		});
 		if (settings.isEnableSwitchWifi()) {
 			spWifi.setAdapter(getSystemsAdapter());
 			spWifi.setOnItemSelectedListener(new OnItemSelectedListener() {
@@ -424,8 +425,8 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 		if (!ProfileModel.NO_VALUE_STR.equals(profileName)) {
 			etName.setText(profileName);
 		}
-		setSeekbar(profile.getMaxFreq(), availCpuFreqsMax, sbCpuFreqMax, tvCpuFreqMax);
-		setSeekbar(profile.getMinFreq(), availCpuFreqsMin, sbCpuFreqMin, tvCpuFreqMin);
+		setSeekbar(profile.getMaxFreq(), availCpuFreqsMax, sbCpuFreqMax, spCpuFreqMax);
+		setSeekbar(profile.getMinFreq(), availCpuFreqsMin, sbCpuFreqMin, spCpuFreqMin);
 		spWifi.setSelection(profile.getWifiState());
 		spGps.setSelection(profile.getGpsState());
 		spBluetooth.setSelection(profile.getBluetoothState());
@@ -441,27 +442,23 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 			labelCpuFreqMax.setText(R.string.labelMax);
 		}
 		if (governorConfig.hasMinFrequency()) {
-			GuiUtils.showViews(trMinFreq, new View[] { labelCpuFreqMin, tvCpuFreqMin, sbCpuFreqMin });
+			GuiUtils.showViews(trMinFreq, new View[] { labelCpuFreqMin, spCpuFreqMin, sbCpuFreqMin });
 		} else {
-			GuiUtils.hideViews(trMinFreq, new View[] { labelCpuFreqMin, tvCpuFreqMin, sbCpuFreqMin });
+			GuiUtils.hideViews(trMinFreq, new View[] { labelCpuFreqMin, spCpuFreqMin, sbCpuFreqMin });
 		}
 		if (governorConfig.hasMaxFrequency()) {
-			GuiUtils.showViews(trMaxFreq, new View[] { labelCpuFreqMax, tvCpuFreqMax, sbCpuFreqMax });
+			GuiUtils.showViews(trMaxFreq, new View[] { labelCpuFreqMax, spCpuFreqMax, sbCpuFreqMax });
 		} else {
-			GuiUtils.hideViews(trMaxFreq, new View[] { labelCpuFreqMax, tvCpuFreqMax, sbCpuFreqMax });
+			GuiUtils.hideViews(trMaxFreq, new View[] { labelCpuFreqMax, spCpuFreqMax, sbCpuFreqMax });
 		}
 		governorFragment.updateView();
 	}
 
 
-	private void setSeekbar(int val, int[] valList, SeekBar seekBar, TextView textView) {
-		if (val == HardwareHandler.NO_VALUE_INT) {
-			textView.setText(R.string.notAvailable);
-		} else {
-			textView.setText(ProfileModel.convertFreq2GHz(val));
-		}
+	private void setSeekbar(int val, int[] valList, SeekBar seekBar, Spinner spinner) {
 		for (int i = 0; i < valList.length; i++) {
 			if (val == valList[i]) {
+				spinner.setSelection(i);
 				seekBar.setProgress(i);
 			}
 		}
@@ -496,5 +493,33 @@ public class ProfileEditor extends FragmentActivity implements GovernorFragmentC
 			}
 		}
 		return false;
+	}
+
+	private SpinnerAdapter getCpufreqSpinnerAdapter(int[] freqs) {
+		ArrayAdapter<Integer> cpuFreqAdapter = new ArrayAdapter<Integer>(this, android.R.layout.simple_spinner_item, android.R.id.text1);
+		cpuFreqAdapter.setDropDownViewResource(android.R.layout.simple_spinner_dropdown_item);
+		for (int i = freqs.length - 1; i > -1; i--) {
+			cpuFreqAdapter.add(freqs[i]);
+		}
+		return cpuFreqAdapter;
+	}
+
+	private void setFrequency() {
+		try {
+			int max = availCpuFreqsMax[sbCpuFreqMax.getProgress()];
+			int min = availCpuFreqsMin[sbCpuFreqMin.getProgress()];
+			if (max >= min) {
+				updateModel();
+				profile.setMaxFreq(max);
+				profile.setMinFreq(min);
+				updateView();
+			} else {
+				Toast.makeText(ProfileEditor.this, R.string.msg_minimal_frequency_bigger_than_the_maximal, Toast.LENGTH_LONG).show();
+				updateView();
+			}
+
+		} catch (ArrayIndexOutOfBoundsException e) {
+			Logger.e("Cannot set max freq in gui", e);
+		}
 	}
 }
