@@ -4,6 +4,12 @@ V
 * bug fixes
 -
 
+V 
+* features
+- Use spinner to choose frequencies
+* bug fixes
+-
+
 V 2.3.1
 * features
 -
